[Backport] Map the absl::is_trivially_* functions to their std impl

There's no point redefining these functions if they are supported by the
compiler and the version of libstdc++. Also, some of the builtins used
by the absl implementation of these functions (e.g.
__has_trivial_destructor) have been deprecated in Clang 15.

Original commit:
https://github.com/abseil/abseil-cpp/commit/cfe27e79cfcbefb2b4479e04f80cbb299bc46965

Task-number: QTBUG-108240
Change-Id: I7373b65d84909b2e1877b78ff9058446ab5720e4
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/455714
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>